fix: apply the reviewer's remaining nits EXO-88467
Review nits on the develop backport (processes#497, ahamdi round 1): the 5
new Java files (ProcessesMcpTool, its 3 model records, ProcessesMcpToolTest)
carried a copyright header that differed from the repo's only in blank
comment lines, tripping Sonar S1451 -- copied byte-for-byte from an existing
file (year 2026, since these are new files). Collectors.toList()/lambda null
filters replaced by toList()/Objects::nonNull; cancelWorkRequest's throws
Exception narrowed to what updateWork and getWorkById actually declare
(getMyRequests and getPendingApprovals keep throws Exception: their
collaborators getWorks/findTasks genuinely declare it). The pom.xml comment
about the ai-contribution pin is dropped now that this backport already
removed the pin. The test class Javadoc is updated to describe what the
suite covers after this round's additions.

Applied in the backport at the reviewer's request; not on
feature/ai-contribution yet (tracked on EXO-90362).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>